# ml2-recorder

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY.md  requirements.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_capture.cpp  audio_capture.h  capture_profile.h  csv_writer.cpp  csv_writer.h  depth_capture.cpp  depth_capture.h  fast_copy.h  h264_encoder.cpp  h264_encoder.h  imu_capture.cpp  imu_capture.h  main.cpp  meshing_capture.cpp  meshing_capture.h  metadata_writer.cpp  metadata_writer.h  perception_capture.cpp  perception_capture.h  rgb_capture.cpp  rgb_capture.h  ring_buffer.cpp  ring_buffer.h  session.cpp  session.h  storage_monitor.cpp  storage_monitor.h  thermal_monitor.cpp  thermal_monitor.h  timestamp.cpp  timestamp.h  vrs_writer.cpp  vrs_writer.h  world_camera_capture.cpp  world_camera_capture.h  write_queue.cpp  write_queue.h
app/src/main/cpp/boost_shim/boost/interprocess/sync/: interprocess_semaphore.hpp
app/src/main/cpp/boost_shim/boost/uuid/: uuid.hpp  uuid_generators.hpp  uuid_io.hpp
app/src/main/java/com/ml2/recorder/: RecorderActivity.java
app/src/main/res/values/: strings.xml
docs/: schema.md  testing.md
sample_dataset/: README.md  load_sample.py
tests/: CMakeLists.txt  test_csv_writer.cpp  test_ring_buffer.cpp  test_session.cpp  test_timestamp.cpp
tools/: check_sample.py  convert_session_to_hdf5.py  download_deps.sh  export_session.sh  inspect_frame.py  quality_check.py  quicktest.sh  test_on_device.sh  test_validate_session.py  validate_session.py  view_rerun.py  view_session.py
